<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.mab.ui.bottom_navigation.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.mab.ui.bottom_navigation.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.mab.ui.bottom_navigation.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mab.ui.drawer_navigation.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.mab.ui.drawer_navigation.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.mab.ui.drawer_navigation.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/mediaInfoFragment"
        android:name="com.example.mab.ui.fragments.MediaInfoFragment"
        android:label="fragment_media_info"
        tools:layout="@layout/fragment_media_info" />
    <fragment
        android:id="@+id/boardFragment"
        android:name="com.example.mab.ui.onboard.BoardFragment"
        android:label="fragment_board"
        tools:layout="@layout/fragment_board" />
    <fragment
        android:id="@+id/characterInfoFragment"
        android:name="com.example.mab.ui.fragments.CharacterInfoFragment"
        android:label="fragment_character_info"
        tools:layout="@layout/fragment_character_info" />
    <fragment
        android:id="@+id/tvShowInfoFragment"
        android:name="com.example.mab.ui.fragments.TvShowInfoFragment"
        android:label="fragment_tv_show_info"
        tools:layout="@layout/fragment_tv_show_info" />

</navigation>