<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.fragments.MediaInfoFragment">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:id="@+id/linear_layout_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="bottom"
                android:orientation="horizontal"
                android:paddingStart="14dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardview">


                <TextView
                    android:id="@+id/text_view_media_name_userPreferred"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/cowboy_bebop"
                    android:textColor="@android:color/white"
                    android:textIsSelectable="true"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="6dp"
                    android:gravity="top">

                    <ImageView
                        android:id="@+id/star"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:src="@drawable/ic_baseline_star" />

                    <TextView
                        android:id="@+id/text_view_average_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:background="#FFF109"
                        android:padding="2dp"
                        android:text="@string/_86"
                        android:textColor="@android:color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/text_view_media_name_userPreferred_native"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:text="@string/JP_name_example"
                android:textColor="@android:color/white"
                android:textIsSelectable="true"
                android:textSize="14sp"
                android:textStyle="italic"
                app:layout_constraintTop_toBottomOf="@id/linear_layout_name" />


            <ImageView
                android:id="@+id/image_view_coboy_afisha"
                android:layout_width="150dp"
                android:layout_height="210dp"
                android:layout_marginStart="14dp"
                android:layout_marginTop="9dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/coboy_afisha"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view_media_name_userPreferred_native" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:layout_marginStart="170dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@id/image_view_coboy_afisha"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toEndOf="@id/image_view_coboy_afisha"
                app:layout_constraintTop_toTopOf="@id/image_view_coboy_afisha">


                <LinearLayout
                    android:id="@+id/LinearLayout_anime_parameters"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:gravity="center_vertical"

                            android:paddingStart="5dp"
                            android:text="@string/type"
                            android:textColor="@android:color/white"
                            tools:ignore="NestedWeights" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:paddingStart="5dp"
                            android:text="@string/format"
                            android:textColor="@android:color/white" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:paddingStart="5dp"
                            android:text="@string/status"
                            android:textColor="@android:color/white" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:paddingStart="5dp"
                            android:text="@string/season"
                            android:textColor="@android:color/white" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:paddingStart="5dp"
                            android:text="@string/episodes"
                            android:textColor="@android:color/white" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:paddingStart="5dp"
                            android:text="@string/duration"
                            android:textColor="@android:color/white" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:orientation="vertical">


                        <TextView
                            android:id="@+id/text_view_type"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:paddingStart="5dp"
                            android:text="@string/anime"
                            android:textColor="@android:color/white"
                            android:textStyle="bold"
                            tools:ignore="NestedWeights" />

                        <TextView
                            android:id="@+id/text_view_format"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:paddingStart="5dp"
                            android:text="@string/tv"
                            android:textColor="@android:color/white"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/text_view_status"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:paddingStart="5dp"
                            android:text="@string/finished"
                            android:textColor="@android:color/white"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/text_view_season"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:paddingStart="5dp"
                            android:text="@string/spring"
                            android:textColor="@android:color/white"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/text_view_episodes"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:paddingStart="5dp"
                            android:text="@string/_7777"
                            android:textColor="@android:color/white"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/text_view_duration"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:paddingStart="5dp"
                            android:text="@string/_24"
                            android:textColor="@android:color/white"
                            android:textStyle="bold" />


                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:paddingStart="5dp"
                        android:text="@string/genres"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/text_view_genres"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center_vertical"
                        android:paddingStart="5dp"
                        android:text="Action, Adventure, Drama, Sci-Fi"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />

                </LinearLayout>


            </LinearLayout>


            <androidx.cardview.widget.CardView
                android:id="@+id/cardview"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/image_view_cowboy_banner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerCrop"
                    android:src="@drawable/cowboy_banner"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btn_open_discription"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimary"
                android:text="@string/discription"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                app:layout_constraintLeft_toLeftOf="@id/image_view_coboy_afisha"
                app:layout_constraintTop_toBottomOf="@id/image_view_coboy_afisha" />

            <TextView
                android:id="@+id/text_view_media_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:stateListAnimator="@anim/fragment_open_exit"
                android:text="@string/discriotion"
                android:textColor="@android:color/white"
                android:textIsSelectable="true"
                android:textStyle="bold"
                android:visibility="visible"
                app:layout_constraintLeft_toLeftOf="@id/btn_open_discription"
                app:layout_constraintTop_toBottomOf="@id/btn_open_discription" />

            <Button
                android:id="@+id/btn_open_characters"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimary"
                android:gravity="start|center"
                android:text="@string/characters"
                android:textAllCaps="false"
                android:textColor="@android:color/holo_blue_dark"
                app:layout_constraintStart_toStartOf="@id/text_view_media_description"
                app:layout_constraintTop_toBottomOf="@id/text_view_media_description" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="@id/btn_open_characters"
                app:layout_constraintTop_toBottomOf="@id/btn_open_characters"
                tools:listitem="@layout/item_character" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_relations_anime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/recyclerview"
                tools:listitem="@layout/item_anilist_data" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>